--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.3.0
   smooth_page_indicator: ^1.1.0
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
